fix post action spacing

--- a/src/components/MockLinkedInPost/MockLinkedInPost.scss
+++ b/src/components/MockLinkedInPost/MockLinkedInPost.scss
@@ -67,6 +67,6 @@
   padding: 10px;
 }
 
-.post-action > span {
+.action > span {
   margin-left: 3px;
 }
